PROD_10-24-19/force-app/main/default/objects/Mass_Opp_Creation__c/fields/Default_Filter_Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>Default_Filter_Key_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default Filter for Key Contacts, set to true to default filter to enabled [BF-5]</description>
    <inlineHelpText>Default Filter for Key Contacts, set to true to default filter to enabled</inlineHelpText>
    <label>Default Filter Key Contact</label>
    <type>Checkbox</type>
</CustomField>