PROD_10-24-19/force-app/main/default/objects/Mass_Opp_Creation__c/fields/Default_Filter_Stage__c.field-meta.xml
<CustomField>
    <fullName>Default_Filter_Stage__c</fullName>
    <defaultValue>&#39;8 - Closed/Confirmed (PSG)&#39;</defaultValue>
    <description>Default Stage Name for opportunity filters [BF-5]</description>
    <inlineHelpText>Default Stage Name for opportunity filters</inlineHelpText>
    <label>Default Filter Stage</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>