PROD_10-24-19/force-app/main/default/objects/Mass_Opp_Creation__c/fields/Default_New_Opp_Currency__c.field-meta.xml
<CustomField>
    <fullName>Default_New_Opp_Currency__c</fullName>
    <defaultValue>&#39;USD&#39;</defaultValue>
    <description>Default New Opportunity Currency [BF-5]</description>
    <inlineHelpText>Default New Opportunity Currency</inlineHelpText>
    <label>Default New Opp Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>