PROD_10-24-19/force-app/main/default/objects/Mass_Opp_Creation__c/fields/Default_Opp_Size__c.field-meta.xml
<CustomField>
    <fullName>Default_Opp_Size__c</fullName>
    <defaultValue>10000000</defaultValue>
    <description>Default Opp. Size [BF-5]</description>
    <inlineHelpText>Default Opp. Size</inlineHelpText>
    <label>Default New Opp Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>