PROD_10-24-19/force-app/main/default/objects/Mass_Opp_Creation__c/fields/Exclude_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Contact_Status__c</fullName>
    <description>The contact status values that will be excluded from results [BF-7]</description>
    <inlineHelpText>The contact status values that will be excluded from results</inlineHelpText>
    <label>Exclude Contact Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>