PROD_10-24-19/force-app/main/default/objects/Mass_Opp_Creation__c/fields/Profile_Ids__c.field-meta.xml
<CustomField>
    <fullName>Profile_Ids__c</fullName>
    <description>List of profile ids, separated by commas which specify the profile id&#39;s used to identify a CRM end user [BF-5]</description>
    <inlineHelpText>List of profile ids, separated by commas which specify the profile id&#39;s used to identify a CRM end user</inlineHelpText>
    <label>Profile Ids</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>